// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should be vertical and match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={true}
>
  <Selectorstyles__ActiveElement
    key="en"
    onClick={[Function]}
    selected={false}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__ActiveElement>
  <Selectorstyles__ActiveElement
    key="de"
    onClick={[Function]}
    selected={true}
    to="/augsburg/de/"
  >
    Deutsch
  </Selectorstyles__ActiveElement>
  <Selectorstyles__InactiveElement
    data-tip="random tooltip"
    key="fr"
  >
    Französisch
  </Selectorstyles__InactiveElement>
</Selectorstyles__Wrapper>
`;

exports[`Selector should match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={false}
>
  <Selectorstyles__ActiveElement
    key="en"
    onClick={[Function]}
    selected={false}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__ActiveElement>
  <Selectorstyles__ActiveElement
    key="de"
    onClick={[Function]}
    selected={true}
    to="/augsburg/de/"
  >
    Deutsch
  </Selectorstyles__ActiveElement>
  <Selectorstyles__InactiveElement
    data-tip="random tooltip"
    key="fr"
  >
    Französisch
  </Selectorstyles__InactiveElement>
</Selectorstyles__Wrapper>
`;
